--- a/barbearia-alura/produtos.css
+++ b/barbearia-alura/produtos.css
@@ -3,6 +3,7 @@
 header {
     background-color: #bbbbbb;
     padding: 20px 0;
+    border-bottom: 5px solid #1d0d0d;
 }
 
 .caixa {
@@ -30,6 +31,23 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: #c78c19;
+    text-decoration: underline;
+}
+
+.produtos li:hover {
+    border-color: #c78c19;
+}
+
+.produtos li:active {
+    border-color: #088c19;
+}
+
+.produtos li:hover h2 {
+    font-size: 35px;
+}
+
 .produtos {
     width: 940px;
     margin: 0 auto;
@@ -41,10 +59,11 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background-color: #cccccc;
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 .produtos h2 {
@@ -60,4 +79,17 @@ nav a {
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url("imagens/bg.jpg");
+    padding: 40px 0;
+    border-top: 5px solid #1d0d0d;
+}
+
+.copyright {
+    color: #ffffff;
+    font-size: 13px;
+    margin: 20px 0;
 }
