--- a/barbearia-alura/style.css
+++ b/barbearia-alura/style.css
@@ -103,7 +103,7 @@ form {
     margin: 40px 0;
 }
 
-form label, form p {
+form label, form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -118,4 +118,22 @@ form label, form p {
 
 .checkbox {
     margin: 20px 0px;
+}
+
+.enviar {
+    width: 30%;
+    padding: 10px 0px;
+    background-color: #1d0d0d;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    border: none;
+    border-radius: 3px;
+    transition: 0.9s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background-color: #c78c19;
+    transform: scale(1.1);
 }
