--- a/barbearia-alura/style-home.css
+++ b/barbearia-alura/style-home.css
@@ -4,37 +4,77 @@ body {
     font-size: 20px;
 }
 
-#banner {
+header {
     width: 100%;
-    border: 3px solid black;
+    background-color: #bbbbbb;
+    padding: 20px 0;
+    border-bottom: 5px solid #1d0d0d;
+}
+
+.caixa {
+    position: relative;
+    max-width: 890px;
+    margin: auto;
+}
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0px;
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 21px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #c78c19;
+    text-decoration: underline;
 }
 
 .title-prin {
-    padding-left: 20px;
+    padding-left: 25px;
+    font-weight: bold;
+    font-size: 33px;
+}
+
+#banner {
+    width: 100%;
 }
 
 .segundo {
     background: #cccccc;
-    border: 3px solid black;
     width: 100%;
-}
-
-.title-center {
-    text-align: center;
 }
 
 p {
     text-align: center;
+    font-size: 20px;
+    line-height: 1.5em;
+    padding: 3px 30px;
 }
 
-em strong {
+.title-center {
+    text-align: center;
+    font-size: 25px;
+}
+
+p strong {
     color: red;
 }
 
 .bene {
     background-color: grey;
-    border: 3px solid black;
-    width: 100%;
+    margin: auto;
 }
 
 h3 {
@@ -47,7 +87,9 @@ h3 {
     padding: 2%;
 }
 
-ul {
+.lista {
+    margin: 10px 0px;
+    padding-left: 3%;
     display: inline-block;
     vertical-align: top;
     list-style-position: inside;
@@ -55,7 +97,8 @@ ul {
 }
 
 .itens {
-    font-style: italic;  
+    font-style: italic; 
+    list-style-type: disc;
 }
 
 #beneficio {
