--- a/barbearia-alura/style.css
+++ b/barbearia-alura/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+body {
+    font-family: 'Montserrat', sans-serif;;
+}
+
 header {
     width: 100%;
     background-color: #bbbbbb;
@@ -9,13 +13,13 @@ header {
 
 .caixa {
     position: relative;
-    max-width: 890px;
-    margin: 0 auto;
+    min-width: 480px;
+    margin-right: 25%;
 }
 
 nav {
     position: absolute;
-    top: 110px;
+    top: 115px;
     right: 0px;
 }
 
@@ -96,8 +100,7 @@ footer {
 }
 
 main {
-    max-width: 950px;
-    margin: 0 auto;
+
 }
 
 form {
@@ -153,4 +156,110 @@ thead {
 td, th {
     border: 1px solid black;
     padding: 8px 15px;
+}
+
+/* css da página inicial */
+
+.title-one {
+    padding-left: 25px;
+    font-weight: bold;
+    font-size: 3em;
+}
+
+.banner {
+    width: 100%;
+}
+
+.title-aling {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+
+.bkcor {
+    background-color: #1d0d0d;
+    color: #fefefe;
+    padding: 5px;
+}
+
+.bkcor3 {
+    background-color: #1d0d0d;
+    color: #fefefe;
+    width: 50%;
+    margin: 30px auto;
+    padding: 5px;
+}
+
+.segundo {
+    padding: 3em 0;
+    background-color: #fefefe;
+    max-width: 950px;
+    margin: 0 auto;
+}
+
+.segundo p {
+    margin: 0 0 1em;
+}
+
+.segundo strong {
+    font-weight: bold;
+}
+
+.segundo em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
+}
+
+.map-content {
+    max-width: 950px;
+    margin: 0 auto;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.bene {
+    padding: 2em 0;
+    background-color: #888888;
+}
+
+.content-bene {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.beneficio {
+    width: 60%;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
 }
