--- a/barbearia-alura/style.css
+++ b/barbearia-alura/style.css
@@ -184,17 +184,18 @@ td, th {
 .bkcor3 {
     background-color: #1d0d0d;
     color: #fefefe;
+    text-decoration: underline;
     width: 50%;
     padding: 5px;
     margin: 30px auto;
-    border: 1px solid #fefefe;
+    border: 2px solid #fefefe;
 }
 
 .segundo {
     padding: 3em 0;
     background-color: #fefefe;
     max-width: 950px;
-    margin: 0 auto;
+    margin: 0px auto;
 }
 
 .segundo p {
@@ -207,6 +208,10 @@ td, th {
 
 .segundo em {
     font-style: italic;
+}
+
+.two-center {
+    margin: 0px 20px;
 }
 
 .utensilios {
@@ -286,5 +291,13 @@ td, th {
 
     nav {
         position: static;  
+    }
+
+    .lista {
+        width: 100%;
+    }
+
+    .beneficio {
+        margin: 10px 35px;
     }
 }
