--- a/skate-alura/exercicios/ex01-grid/grid.css
+++ b/skate-alura/exercicios/ex01-grid/grid.css
@@ -6,13 +6,13 @@
 
 .corpo {
     background-color: #444444;
-    padding: 8px;
+    padding: 16px;
     width: 100vw;
     height: 100vh;
     display: grid;
-    gap: 8px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 16px;
 }
 
 .cabecalho {
@@ -20,7 +20,8 @@
     border-radius: 10px;
     min-width: 50px;
     min-height: 50px;
-    grid-column: span 4;
+    grid-column: 1 / span 4;
+    grid-row: 4;
 }
 
 .lateral {
@@ -28,6 +29,7 @@
     border-radius: 10px;
     min-width: 50px;
     min-height: 50px;
+    grid-column: 4;
     grid-row: span 3;
 }
 
@@ -36,8 +38,8 @@
     border-radius: 10px;
     min-width: 50px;
     min-height: 50px;
-    grid-column: span 2;
-    grid-row: span 3;
+    grid-column: 2 / span 2;
+    grid-row: 1 / span 3;
 }
 
 .direita-cima {
@@ -45,6 +47,8 @@
     border-radius: 10px;
     min-width: 50px;
     min-height: 50px;
+    grid-column: 1;
+    grid-row: 3;
 }
 
 .direita-baixo {
@@ -52,5 +56,6 @@
     border-radius: 10px;
     min-width: 50px;
     min-height: 50px;
-    grid-row: span 2;
+    grid-column: 1;
+    grid-row: 1 / span 2;
 }
