--- a/skate-alura/flex-e-grid-main/assets/css/estilos.css
+++ b/skate-alura/flex-e-grid-main/assets/css/estilos.css
@@ -256,6 +256,11 @@ body {
     margin-right: 8px;
 }
 
+.cartao__info--preco::before {
+    content: "\e905";
+    margin-right: 8px;
+}
+
 .cartao__info--visualizacao::before {
     content: "\e90f";
     margin-right: 8px;
@@ -275,6 +280,11 @@ body {
 
 .cartao__botao--play::before {
     content: "\e90b";
+    font-size: 24px;
+}
+
+.cartao__botao--loja::before {
+    content: "\e901";
     font-size: 24px;
 }
 
